Legend:

* -> Исправление ошибок защиты
# -> Исправление ошибок
$ -> Изменения языковых модулей
+ -> Добавлено
^ -> Изменено
- -> Удалено
! -> Примечание


-------------------- [0.0.R001] Старт проекта [ 02.06.2015] ------------------

02.06.2015 -- Sumak
! Старт нового проекта SumakMinimap
+ Добавление файлов:
	CHANGELOG
	START.txt
	
-------------------- [0.0.R002] Добавление файлов проекта [ 02.06.2015] ------------------

02.06.2015 -- Sumak
! Добавление файлов проекта
+ Добавление файлов:
	CHANGELOG
	START.txt
	core\..
	media\..

-------------------- [0.0.R003] Добавление информации в README [ 02.06.2015] ------------------
^ - README.txt

-------------------- [1.0R004] Первый релиз [ 03.06.2015] ------------------

! - Первый релиз 
