@@ -1,5 +1,5 @@
 Аддон: SumakMinimap
-Версия: 1.0R004
+Версия: 1.0R005
 Назначение: замена стандартной близзардовской миникарты.
 Отображает: время, координаты, наименование локации (цветом), значки BG, LFG, сложность инста,
 трекер, наличие почты.
