@@ -34,3 +34,8 @@ $ -> Изменения языковых модулей
 
 ! - Первый релиз 
 
+-------------------- [1.0R005] Изменение путей [ 07.06.2015] ------------------
+
+- - удалена папка sound
+^ - изменены значения путей в media.lua
+# - исправлен показ иконки при входящих письмах
